--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </button>
       </div>
     </header>
-    
+
     <!-- <div class="mobile-menu is-open">
       <div class="container mobile-menu-container">
         <button type="button" class="modal-close-btn mobile-menu-close-btn">
@@ -182,7 +182,7 @@
         </div>
       </section>
       <section class="team-section">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="team-header">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
