--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </button>
       </div>
     </header>
-
-    <!-- <div class="mobile-menu is-open">
+<!-- ==========Mobile menu====== -->
+    <div class="mobile-menu"> 
       <div class="container mobile-menu-container">
         <button type="button" class="modal-close-btn mobile-menu-close-btn">
           <svg class="modal-icon-close modal-close-icon" width="8" height="8">
@@ -84,39 +84,39 @@
           </ul>
         </address>
         <ul class="mobile-menu-social-media-list  ">
-          <li class="socials-item1">
-            <a class="socials-link1" href="">
-              <svg class="socials-icon1" width="24" height="24">
+          <li class="socials-item">
+            <a class="socials-link" href="">
+              <svg class="socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
-          <li class="socials-item1">
-            <a class="socials-link1" href="">
-              <svg class="socials-icon1" width="24" height="24">
+          <li class="socials-item">
+            <a class="socials-link" href="">
+              <svg class="socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
 
-          <li class="socials-item1">
-            <a class="socials-link1" href="">
-              <svg class="socials-icon1" width="24" height="24">
+          <li class="socials-item">
+            <a class="socials-link" href="">
+              <svg class="socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
 
-          <li class="socials-item1">
-            <a class="socials-link1" href="">
-              <svg class="socials-icon1" width="24" height="24">
+          <li class="socials-item">
+            <a class="socials-link" href="">
+              <svg class="socials-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
         </ul>
       </div>
-    </div> -->
+    </div> 
 
 
     <main>
